--- a/materials/2-workshop2/8-group-project/group_activity_1_yogurt_starter.qmd
+++ b/materials/2-workshop2/8-group-project/group_activity_1_yogurt_starter.qmd
@@ -128,7 +128,7 @@ yogurt_ps <- phyloseq(otu_table(count_table, taxa_are_rows=FALSE),
 \
 
 
-*These are questions that can be used as a guide. Looking at the data, think about what questions you can address!*
+*These are questions that can be used as a guide. Looking at the data, think about what questions you can address.*
 
 ### Phyloseq cleaning and diagnosis :mag:
 
