--- a/materials/2-workshop2/6-virgo/index.qmd
+++ b/materials/2-workshop2/6-virgo/index.qmd
@@ -5,3 +5,8 @@ format:
     toc: true
 ---
 
+## Slides
+
+```{=html}
+<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTLH8yyWnvKdBNsnW6whNAgO_7b3lD809h_ZUfgcWo-3UfOhSm5jvEAbQ0pS9AHcZa5IACYIi2nsWKs/embed?start=true&loop=false&delayms=3000" frameborder="0" width="1280" height="749" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+```
