--- a/materials/2-workshop2/8-group-project/index.qmd
+++ b/materials/2-workshop2/8-group-project/index.qmd
@@ -28,12 +28,33 @@ Find your group on the instances tab!
 +----------------+-----------------------------------------------------------------------------------+
 
 **Thursday (4/25)** \
-*To be added*
 
-\
++----------------+-------------------------------------------------------------------------------------+
+| Time           | Task                                                                                |
++================+=====================================================================================+
+| 1:30 - 2:00pm  |- Visualizing microbiome composition                                                 |
+|                |- Alpha Diversity                                                                    |
++----------------+-------------------------------------------------------------------------------------+
+| 2:00 - 3:00pm  |- Ordination and Correlations                                                        |
++----------------+-------------------------------------------------------------------------------------+
+|3:00 - 3:30pm   | **Break**                                                                           |
++----------------+-------------------------------------------------------------------------------------+
+|3:30 - 5:00pm   |- Integrating Shotgun Metagenomics                                                   |
++----------------+-------------------------------------------------------------------------------------+
 
 **Friday (4/26)** \
-Group presentations
+
++----------------+-------------------------------------------------------------------------------------+
+| Time           | Task                                                                                |
++================+=====================================================================================+
++----------------+-------------------------------------------------------------------------------------+
+|    AM          |- Review and Presentation preparation                                                |
++----------------+-------------------------------------------------------------------------------------+
+|    PM          |**Group Presentations**                                                              |
++----------------+-------------------------------------------------------------------------------------+
+|                |- Dataset Demo                                                                       |
++----------------+-------------------------------------------------------------------------------------+
+
 
 
 
@@ -105,20 +126,7 @@ This is an observational study to evaluate the relationship between birth contro
 
 
 
-<!-- 
-**Thursday (4/25)**
 
-+----------------+-------------------------------------------------------------------------------------+
-| Time           | Task                                                                                |
-+================+=====================================================================================+
-| 1:30 - 2:00pm  |- Ordination and Correlations                                                        |
-+----------------+-------------------------------------------------------------------------------------+
-| 2:00 - 3:00pm  |- Differential Abundance                                                             |
-+----------------+-------------------------------------------------------------------------------------+
-|3:00 - 3:30pm   | **Break**                                                                           |
-+----------------+-------------------------------------------------------------------------------------+
-|3:30 - 5:00pm   |- Integrating Shotgun Metagenomics                                                   |
-+----------------+-------------------------------------------------------------------------------------+ -->
 
 ### Example workflows
 <!-- [Johnathan's test demo](johnathan_demo_final.qmd) -->
