--- a/index.qmd
+++ b/index.qmd
@@ -32,7 +32,14 @@ toc: false
 2. [Join the discord here](https://discord.gg/Mb7pRTptqm) (once you've joined, you can bookmark [https://discord.com/channels/1158136582201692202/](https://discord.com/channels/1227264067899621427) to go straight to the channel.)  
 3. Await instructions on logging into your AWS instance.
 
-<!-- Please install R and RStudio on your laptop. If you already have R and Rstudio installed, please make sure they are up-to date. Please install `R version 4.3.1` and `RStudio version 2023.09.0` [Click here for instructions on installing R and RStudio](installation-instructions.qmd) -->
+
+<!-- ## Exporting your data from the AWS instance
+
+1. Navigate to the file pane in your interactive RStudio
+2. Click the house or "Home" to return the the home directory
+3. Select the "workshop_2" directory by clicking the white box next to it
+4. Click the gear or "More"
+5. Select Export and Download -->
 
 
 | Date/Time  | Topic  | Instructor|
@@ -60,4 +67,4 @@ toc: false
 |  | Dataset Demo |  |
 |  | Workshop Outro | Scott Handley (Wash U School of Medicine) |
 | |-------------------------------------------------------------- |-------------------------------------------------------------- |
-: <b>Schedule</b> {#tbl-1 .table-bordered .table-sm
+: <b>Schedule</b>
