--- a/materials/2-workshop2/8-group-project/index.qmd
+++ b/materials/2-workshop2/8-group-project/index.qmd
@@ -130,7 +130,7 @@ This is an observational study to evaluate the relationship between birth contro
 
 ### Example workflows
 <!-- [Johnathan's test demo](johnathan_demo_final.qmd) -->
-*Will be added on Friday!* \
+*Will be added on Friday* \
 
 \
 Note: If downloading the demos, make sure the filepaths to the datasets match!
