--- a/materials/2-workshop2/8-group-project/index.qmd
+++ b/materials/2-workshop2/8-group-project/index.qmd
@@ -130,7 +130,7 @@ This is an observational study to evaluate the relationship between birth contro
 
 ### Example workflows
 <!-- [Johnathan's test demo](johnathan_demo_final.qmd) -->
-*Will be added on Friday* \
+Note: The filepaths to the datasets may not match! \
+[Asavela's Demo](asavela_grp_b_analysis.qmd) \
+[Liz's Demo](liz_yogurt.qmd)
 
-\
-Note: If downloading the demos, make sure the filepaths to the datasets match!
