--- a/materials/2-workshop2/8-group-project/asavela_grp_b_analysis.qmd
+++ b/materials/2-workshop2/8-group-project/asavela_grp_b_analysis.qmd
@@ -6,9 +6,9 @@ title: "Group B: Menstruation Data"
 # title-block-categories: true
 author: "Asavela"
         
-# format: 
-  # html: 
-  #   toc: true
+format: 
+  html: 
+    toc: true
   #   embed-resources: true
   #   page-layout: full
   #   fig-dpi: 300
